--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/footer.css" />
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/472907050b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -69,17 +71,17 @@
 
                 <div class="item">
                     <h2>Fique Ligado</h2>
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>
                         <i class="fab fa-instagram"></i>
-                        <i class="fab fa-whatsapp-square"></i>
+                        <i class="fab fa-whatsapp"></i>
                 </div>
 
                 <div class="item">
                     <h2>Contato</h2>
-                        <h3>(18)99123-4567</h3>
-                        <h3>contato@gmail.com</h3>
-                        <h3>Rua: Rui Barbaosa Centro</h3>
-                        <h3>Quata - SP</h3>
+                        <h4>(18)99123-4567</h4>
+                        <h4>contato@gmail.com</h4>
+                        <h4>Rua Rui Barbaosa - Centro</h4>
+                        <h4>Quata - SP</h4>
                 </div>
             </div>
 
