--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <i class="fas fa-shopping-cart"></i>
         </div>
 </div>
-        <hr size=0.1 width=100% color=#464646 >
-
+        <hr size=0.1 width=100% color=#c9c9d3 >
         <nav>
             <div class="lista">
                 <ul>
@@ -72,7 +71,7 @@
                 <div class="item">
                     <h2>Fique Ligado</h2>
                         <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
+                        <a href="https://www.instagram.com/mosquitos.store/"><i class="fab fa-instagram"></i> </a>
                         <i class="fab fa-whatsapp"></i>
                 </div>
 
