--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <i class="fas fa-shopping-cart"></i>
         </div>
 </div>
-        <hr size=0.1 width=100% color=#c9c9d3 >
+        <hr size=0.1 width=100% color=#222222 >
         <nav>
             <div class="lista">
                 <ul>
