--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    
 
     <title>LojaVirtual</title>
 
@@ -10,6 +9,12 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/box.css" />
+
+    <link rel="stylesheet" 
+        href="styles/respo.css" 
+        media="screen and (max-width: 768px)" 
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;600&display=swap" rel="stylesheet">
@@ -27,6 +32,12 @@
         </div>
 </div>
         <hr size=0.1 width=100% color=#222222 >
+
+        <div class="menu-toggle">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </div>
         <nav>
             <div class="lista">
                 <ul>
@@ -111,5 +122,6 @@
 
     </div>
 
+    <script src="scripts/script.js"></script>
 </body>
 </html>
