--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>LojaVirtual</title>
 
     <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/newHeader.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/box.css" />
 
     <link rel="stylesheet" 
         href="styles/respo.css" 
-        media="screen and (max-width: 768px)" 
+        media="screen and (max-width: 824px)" 
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,47 +22,37 @@
 </head>
 <body>
     
-    <header> 
-        <div class="title">
-        <h3>MinhaLojaVirtual</h3>
-
-        <div class="icons">
-            <i class="fas fa-search"></i>
-            <i class="fas fa-shopping-cart"></i>
-        </div>
-</div>
-        <hr size=0.1 width=100% color=#222222 >
-
-        <div class="menu-toggle">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
-        </div>
-        <nav>
-            <div class="lista">
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="#">Novidades</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="#">Tenis Masculino</a></li>
-                </ul>
-
-                <ul>
-                    <li><a href="#">Tenis Feminino</a></li>
-                </ul>
+    <header>
+        <div class="container">
+          <img
+            src="./img/mosquitoIcon.png"
+            alt="Rocketseat"
+          />
+          <div class="menu-section">
+            <div class="menu-toggle">
+              <div class="one"></div>
+              <div class="two"></div>
+              <div class="three"></div>
             </div>
-            
-            <div class="conta">
-                <button class="conta">Conta</button>
-            </div>
-
-        </nav>
-    </header>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">Inico</a>
+                </li>
+                <li>
+                  <a href="#">Novidades</a>
+                </li>
+                <li>
+                  <a href="#">Tenis Masculino</a>
+                </li>
+                <li>
+                  <a href="#">Tenis Feminino</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
 
     <div class="conteudo">
 
